[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/lobby.gd" type="Script" id=1]
[ext_resource path="res://scenes/waiting_room.tscn" type="PackedScene" id=2]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0431373, 0, 0.0980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 370.0
margin_top = 212.0
margin_right = 654.0
margin_bottom = 388.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 284.0
margin_bottom = 14.0
text = "Lobby"
align = 1

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 284.0
margin_bottom = 131.0
custom_constants/vseparation = 15
custom_constants/hseparation = 15
columns = 2

[node name="NameLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 69.0
margin_bottom = 19.0
text = "Name"

[node name="NameTextbox" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 84.0
margin_right = 284.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
text = "Enter name"

[node name="IPLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 44.0
margin_right = 69.0
margin_bottom = 58.0
text = "IP Address"

[node name="IPTextbox" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 84.0
margin_top = 39.0
margin_right = 284.0
margin_bottom = 63.0
rect_min_size = Vector2( 200, 0 )

[node name="PortLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 83.0
margin_right = 69.0
margin_bottom = 97.0
text = "Port"

[node name="PortTextbox" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 84.0
margin_top = 78.0
margin_right = 284.0
margin_bottom = 102.0
rect_min_size = Vector2( 200, 0 )

[node name="ConnectButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 146.0
margin_right = 284.0
margin_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 30 )
text = "Connect to server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaitingRoom" parent="." instance=ExtResource( 2 )]
visible = false

[node name="VBoxContainer" parent="WaitingRoom/CenterContainer" index="0"]
margin_top = 263.0
margin_bottom = 337.0

[connection signal="text_changed" from="CenterContainer/VBoxContainer/GridContainer/NameTextbox" to="." method="_on_name_textbox_text_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="WaitingRoom/CenterContainer/VBoxContainer/ReadyButton" to="." method="_on_ready_button_pressed"]

[editable path="WaitingRoom"]
